--- a/jade/slides.jade
+++ b/jade/slides.jade
@@ -3,17 +3,12 @@
 section
   h1 Reveal.js
   h3 HTML Presentations Made Easy
-  p
-    small
-      | Created by 
-      a(href='http://hakim.se') Hakim El Hattab
-      | /
-      a(href='http://twitter.com/hakimel') @hakimel
+  p: small: Created by #[a(href='http://hakim.se') Hakim El Hattab]/#[a(href='http://twitter.com/hakimel') @hakimel]
 section
   h2 Heads Up
-  p
-    | reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-    | support for CSS 3D transforms to see it in its full glory.
+  p.
+    reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
+    support for CSS 3D transforms to see it in its full glory.
   aside.notes
     | Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 //
@@ -21,11 +16,7 @@ section
 section
   section
     h2 Vertical Slides
-    p
-      | Slides can be nested inside of other slides,
-      | try pressing 
-      a.navigate-down(href='#') down
-      | .
+    p: Slides can be nested inside of other slides, try pressing #[a.navigate-down(href='#') down].
     a.image.navigate-down(href='#')
       img(width='178', height='238', src='https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png', alt='Down arrow')
   section
@@ -45,14 +36,10 @@ section
   h2 Slides
   p
     | Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at 
-    a(href='http://slid.es', target='_blank') http://slid.es
-    | .
+    | #[a(href='http://slid.es', target='_blank') http://slid.es].
 section
   h2 Point of View
-  p
-    | Press
-    strong ESC
-    | to enter the slide overview.
+  p Press #[strong ESC] to enter the slide overview.
   p
     | Hold down alt and click on any element to zoom in on it using 
     a(href='http://lab.hakim.se/zoom-js') zoom.js
@@ -127,13 +114,7 @@ section#themes
     a(href='?theme=moon#/themes') Moon 
     | - 
     a(href='?theme=solarized#/themes') Solarized 
-  p
-    small
-      | * Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the 
-      code &lt;head&gt; 
-      | using a 
-      code &lt;link&gt;
-      | .
+  p: small * Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the #[code &lt;head&gt;] using a #[code &lt;link&gt;].
 section
   h2 Global State
   p
