Added Gofigure programmatic drawing support

--- a/jade/slides.jade
+++ b/jade/slides.jade
@@ -1,9 +1,9 @@
 //Any section element inside of this container is displayed as a slide 
 
 section
-  h1 Reveal.js
-  h3 HTML Presentations Made Easy
-  p: small: Created by #[a(href='http://hakim.se') Hakim El Hattab]/#[a(href='http://twitter.com/hakimel') @hakimel]
+  h1 Reveal.js Enhanced
+  h3 Technical HTML Presentations Made Easy
+  p: small: Created by #[a(href='http://hakim.se') Hakim El Hattab]/#[a(href='http://twitter.com/hakimel') @hakimel] & #[a(href='http://blog.akselgresvig.com') Aksel Gresvig]
 section
   h2 Heads Up
   p.
@@ -238,6 +238,12 @@ section
       a(href='https://github.com/hakimel/reveal.js') Source code on GitHub
     li
       a(href='http://twitter.com/hakimel') Follow me on Twitter
+
+section(data-state="gofigure-demo")
+  h1 Programmatic drawing!
+  small Courtesy of #[a(href='http://eoftedal.github.io/gofigure/index.html') eoftedal.github.io/gofigure]
+  #figure
+
 section
   h1 THE END
-  h3 BY Hakim El Hattab / hakim.se
+  h3 BY Hakim El Hattab & Aksel Gresvig
