Updated title and added co-author to first slide

--- a/index.jade
+++ b/index.jade
@@ -3,7 +3,7 @@ html(lang="en")
   head
     meta(charset='utf-8')
     
-    title SW2014
+    title Reveal.js Enhanced
     
     meta(name='description', content='A framework for easily creating beautiful presentations using the Jade templating language')
     meta(name='author', content='Hakim El Hattab & Aksel Gresvig')
