--- a/jade/slides.jade
+++ b/jade/slides.jade
@@ -3,7 +3,8 @@
 section
   h1 Reveal.js Enhanced
   h3 Technical HTML Presentations Made Easy
-  p: small: Created by #[a(href='http://hakim.se') Hakim El Hattab]/#[a(href='http://twitter.com/hakimel') @hakimel] & #[a(href='http://blog.akselgresvig.com') Aksel Gresvig]
+  p: small Created by #[a(href='http://hakim.se') Hakim El Hattab]/#[a(href='http://twitter.com/hakimel') @hakimel] 
+    | & #[a(href='http://blog.akselgresvig.com') Aksel Gresvig]
 section
   h2 Heads Up
   p.
