--- a/jade/slides.jade
+++ b/jade/slides.jade
@@ -241,10 +241,33 @@ section
       a(href='http://twitter.com/hakimel') Follow me on Twitter
 
 section(data-state="gofigure-demo")
-  h1 Programmatic drawing!
-  small Courtesy of #[a(href='http://eoftedal.github.io/gofigure/index.html') eoftedal.github.io/gofigure]
+  h2 Programmatic drawing!
+  p Courtesy of #[a(href='http://eoftedal.github.io/gofigure/index.html') eoftedal.github.io/gofigure]
+  small Hit space or arrows to draw next step
   #figure
 
+  script.
+    head(function(){ Reveal.addEventListener( 'gofigure-demo', function( event ) {
+      setTimeout(function() {
+        $('#figure').empty();
+        
+        //Add a drawing area to element with id 'figure', with the given width and height
+        var figure = gofigure.create('figure', '980', '550'); 
+
+        //Draw a box and animate drawing immediately
+        figure.box(600, 50, 100, 200).animate();
+
+        //Group two animations together and begin animation immediately
+        figure.arrow(600, 150, 500, 150).centeredText(550, 167, "to").animate();
+
+        //Create list of animations and bind them to keyboard arrow presses
+        gofigureplugin.addStep('figure', figure.arrow(600, 150, 500, 150).centeredText(550, 167, "to"));
+        gofigureplugin.addStep('figure', figure.box(400, 50, 100, 200, { radius: 0 }).centeredText(450, 270, "Box with small text", {fontsize: 11}));
+        gofigureplugin.addStep('figure', figure.arrow(400, 150, 300, 150, {arrowheads: "end" }).centeredText(350, 167, "single head arrow", {fontsize: 11}));
+        gofigureplugin.addStep('figure', figure.centeredText(250, 270, "Slowly drawn box").box(200, 50, 100, 200, {duration: 5000, radius: 25 }));
+      }, 1000);
+    }, false);});
+    
 section
   h1 THE END
   h3 BY Hakim El Hattab & Aksel Gresvig
