--- a/jade/slides.jade
+++ b/jade/slides.jade
@@ -21,7 +21,7 @@ section
     a.fragment.image.navigate-down(href='#')
       img(width='178', height='238', src='https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png', alt='Down arrow')
 
-    aside.notes(data-markdown)
+    aside.notes(data-markdown).
       * These are my notes
       * which are very handy
       * during a presentation
